<resources>
    <string name="app_name">彳言</string>
    <string name="logo">LOGO</string>
    <string name="phone_number">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">注册账号</string>
    <string name="RememberPassword">记住密码</string>
    <string name="username_hint">11位数字</string>
    <string name="confirm_password">确认密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender">性别</string>
    <string name="nickname_hint">长度不超过20字符</string>
    <string name="nickname">昵称</string>
    <string name="confirm_password_hint">再次输入密码</string>
    <string name="birthday">生日</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="chat">聊天</string>
    <string name="friends">好友</string>
    <string name="setting">设置</string>
    <string name="friendList">好友列表</string>
    <string name="contact_person">联系人</string>
    <string name="send">发送</string>
</resources>