<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFFFF"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context=".activity.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="40dp">


        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/icons8_image_100"/>

        <EditText
                android:id="@+id/edit_username"
                style="@style/Edit_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/icons8_user_24"
                android:hint="@string/phone_number"
                android:inputType="text"/>


        <EditText
                android:id="@+id/edit_password"
                style="@style/Edit_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/icons8_lock_24"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        <CheckBox
                android:id="@+id/checkBox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RememberPassword"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
        />


        <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_btn"
                android:onClick="onLogin"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/text_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:onClick="onForget"
                android:text="@string/forget_password"
                android:textAlignment="center"
                tools:ignore="RtlCompat"/>

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000000"/>

        <TextView
                android:id="@+id/text_register_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:onClick="onRegister"
                android:text="@string/register_account"
                android:textAlignment="center"
                tools:ignore="RtlCompat"/>
    </LinearLayout>


</LinearLayout>